add java modules